--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+@import "uploadthing/tw/v4";
+@source "../../node_modules/@uploadthing/react/dist";
+/** <-- depends on your project structure */
+
 /* Custom Font Faces */
 @font-face {
   font-family: "IBM Plex Sans";
