--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("/src/app/fonts/IBMPlexSans-Regular.ttf") format("truetype");
+  src: url("/fonts/IBMPlexSans-Regular.ttf") format("truetype");
 }
 
 @font-face {
@@ -18,7 +18,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("/src/app/fonts/IBMPlexSans-Medium.ttf") format("truetype");
+  src: url("/fonts/IBMPlexSans-Medium.ttf") format("truetype");
 }
 
 @font-face {
@@ -26,7 +26,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url("/src/app/fonts/IBMPlexSans-SemiBold.ttf") format("truetype");
+  src: url("/fonts/IBMPlexSans-SemiBold.ttf") format("truetype");
 }
 
 @font-face {
@@ -34,7 +34,7 @@
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url("/src/app/fonts/IBMPlexSans-Bold.ttf") format("truetype");
+  src: url("/fonts/IBMPlexSans-Bold.ttf") format("truetype");
 }
 
 @font-face {
@@ -42,7 +42,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("/src/app/fonts/BebasNeue-Regular.ttf") format("truetype");
+  src: url("/fonts/BebasNeue-Regular.ttf") format("truetype");
 }
 
 /* Theme Configuration - v4 Style */
@@ -173,7 +173,7 @@
   font-weight: 700;
   font-size: 1rem;
   line-height: 1.5rem;
-  
+
   &:hover {
     background-color: var(--color-primary);
 
